--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 	},
 	"dependencies": {
 		"@reduxjs/toolkit": "^2.2.5",
+		"node": "^18.20.4",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-redux": "^9.1.2",
